# mfm

./: Hardware_en.md  README.md  README_en.md  Software_en.md  hardware.md  software.md
embedded/ATmega328/: Makefile  main.c
embedded/Pico_W/: CMakeLists.txt  README_cmake_call.txt
embedded/Pico_W/mfm/: CMakeLists.txt  conf.h  freq.c  freq.h  lwipopts.h  main.c  ntime.c  ntime.h  ringbuffer.c  ringbuffer.h  tcp_client.c  tcp_client.h  test_tcp_client.c  test_tcp_client.h
hardware/counter_atmega328p_v1/: counter_mcu.kicad_sch
hardware/counter_atmega328p_v2/: counter_mcu_v2.kicad_sch
hardware/counter_ps/: counter_ps.kicad_sch
hardware/distributor/: counter_distributor.kicad_sch
mfm_bwatcher/: axistag.cpp  axistag.h  conf.cpp  conf.h  gotodialog.cpp  gotodialog.h  gotodialog.ui  incidentmarker.cpp  incidentmarker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mfm_bwatcher.pro  pointofinterest.cpp  pointofinterest.h
mfm_server/: Makefile  conf.h  conn_slots.c  conn_slots.h  file_mgr.c  file_mgr.h  process_data.c  process_data.h  proto.c  proto.h  server.c
